[package]
name = "coap-server"
version = "0.1.0"
description = "Robust async CoAP server"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasta/coap-server-rs"
categories = ["network-programming"]
keywords = ["coap", "server", "async", "IoT"]
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.0", features = ["codec", "net"] }
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.53"
pin-project = "1.0.10"
sync_wrapper = "0.1.1"
dyn-clone = "1.0.5"
anyhow = "1.0.56"
thiserror = "1.0.30"
env_logger = "0.9.0"
log = "0.4.16"
coap-lite = "0.9.0"
rand = "0.8.5"

[dev-dependencies]
async-stream = "0.3.3"
tokio = { version = "1.17.0", features = ["test-util"] }