[package]
name = "coap-server"
version = "0.1.2"
description = "Robust async CoAP server"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasta/coap-server-rs"
categories = ["network-programming"]
keywords = ["coap", "server", "async", "IoT"]
edition = "2021"

[features]
default-features = ["tokio"]
tokio = ["std", "dep:tokio", "dep:tokio-stream", "dep:tokio-util"]
std = []
embassy = ["dep:oneshot", "dep:embassy-util", "dep:embassy-executor", "dep:embassy-net", "dep:watch"]

[dependencies]
tokio = { version = "1.17.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.8", optional = true }
tokio-util = { version = "0.7.0", features = ["codec", "net"], optional = true }
thingbuf = { version = "0.1", default-features = false }
bytes = { version = "1.1.0", default-features = false }
futures = { version = "0.3.21", default-features = false }
async-trait = "0.1.53"
pin-project = "1.0.10"
sync_wrapper = "0.1.1"
dyn-clone = "1.0.5"
anyhow = { version = "1.0.56", default-features = false }
log = { version = "0.4.16", default-features = false }
coap-lite = { path = "../coap-lite", default-features = false }
rand = { version = "0.8", default-features = false }
hashbrown = "0.12"

embassy-executor = { path = "../embassy/embassy-executor", default-features = false, optional = true }
embassy-net = { path = "../embassy/embassy-net", default-features = false, optional = true }
oneshot = { version = "0.1", default-features = false, features = ["async"], optional = true }
watch = { path = "../watch", default-features = false, optional = true }

[target.'cfg(target_os = "none")'.dependencies]
embassy-util = { path = "../embassy/embassy-util", default-features = false, optional = true }

[target.'cfg(not(target_os = "none"))'.dependencies]
embassy-util = { path = "../embassy/embassy-util", features = ["std"], optional = true }

[dev-dependencies]
async-stream = "0.3.3"
tokio = { version = "1.17.0", features = ["test-util"] }
