[package]
name = "coap-server"
version = "0.1.2"
description = "Robust async CoAP server"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasta/coap-server-rs"
categories = ["network-programming"]
keywords = ["coap", "server", "async", "IoT"]
edition = "2021"

[features]
default = ["std"]
std = ["rand/std", "rand/std_rng", "anyhow/std", "coap-lite/std"]

[dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros", "net"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.0", features = ["codec", "net"] }
bytes = "1.1.0"
futures = "0.3.21"
async-trait = "0.1.53"
pin-project = "1.0.10"
sync_wrapper = "0.1.1"
dyn-clone = "1.0.5"
anyhow = { version = "1.0.56", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }
env_logger = "0.9.0"
log = "0.4.16"
coap-lite = { version = "0.9.0", default-features = false }
rand = { version = "0.8.5", features = [ "alloc" ] }
hashbrown = "0.14.0"

[dev-dependencies]
async-stream = "0.3.3"
tokio = { version = "1.17.0", features = ["test-util", "rt-multi-thread"] }
