[package]
name = "coap-server"
version = "0.1.2"
description = "Robust async CoAP server"
authors = ["Josh Guilfoyle <jasta@devtcg.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jasta/coap-server-rs"
categories = ["network-programming"]
keywords = ["coap", "server", "async", "IoT"]
edition = "2021"

[features]
default = ["std"]
# TODO: currently required to use std!
std = ["rand/std", "rand/std_rng", "anyhow/std", "coap-lite/std", "bytes/std", "futures/std"]

[dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.7.0", features = ["codec"] }
bytes = { version = "1.1.0", default-features = false }
futures = { version = "0.3.21", default-features = false }
async-trait = "0.1.53"
pin-project = "1.0.10"
dyn-clone = "1.0.5"
anyhow = { version = "1.0.56", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }
log = "0.4.16"
coap-lite = { version = "0.9.0", default-features = false }
rand = { version = "0.8.5", features = [ "alloc" ] }
hashbrown = "0.14.0"
